syntax="proto3";
option go_package = "./;proto";

message PageInfo {
  int32 pageNumber = 1;
  int32 pageSize = 2;
}

message UserList {
  int32 userCount = 1;
  repeated UserInfo users = 2;
}

message UserInfo {
  int32 id = 1;
  string mobileNumber = 2;
  string nickname = 3;
  string password = 4;
  int32 gender = 5;
  int32 role = 6;
}

message PasswordVerify {
  string rawPassword = 1;
  string encodedPassword = 2;
}

message PasswordVerifyPass {
  bool isPass = 1;
}

service User {
  rpc GetUserList (PageInfo) returns (UserList);
  rpc GetUser (UserInfo) returns (UserInfo); 
  rpc CreateUser (UserInfo) returns (UserInfo);
  rpc UpdateUser (UserInfo) returns (UserInfo);
  rpc VerifyPassword (PasswordVerify) returns (PasswordVerifyPass);
}